[[bin]]
name = "polkadot"
path = "src/main.rs"

[[bin]]
name = "polkadot-execute-worker"
path = "src/bin/execute-worker.rs"

[[bin]]
name = "polkadot-prepare-worker"
path = "src/bin/prepare-worker.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
rust-version = "1.64.0" # workspace properties
readme = "README.md"
default-run = "polkadot"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/paritytech/polkadot.git"
version = "0.9.43"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
tikv-jemallocator = "0.5.0"

# Crates in our workspace, defined as dependencies so we can pass them feature flags.
polkadot-cli = { path = "cli", features = [ "polkadot-native", "kusama-native", "westend-native", "rococo-native" ]  }
polkadot-node-core-pvf = { path = "node/core/pvf" }
polkadot-node-core-pvf-prepare-worker = { path = "node/core/pvf/prepare-worker" }
polkadot-overseer = { path = "node/overseer" }

# Needed for worker binaries.
polkadot-node-core-pvf-common = { path = "node/core/pvf/common", features = ["test-utils"] }
polkadot-node-core-pvf-execute-worker = { path = "node/core/pvf/execute-worker" }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.2.0"
tokio = "1.24.2"
substrate-rpc-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
polkadot-core-primitives = { path = "core-primitives" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[workspace]
members = [
	"cli",
	"core-primitives",
	"erasure-coding",
	"erasure-coding/fuzzer",
	"primitives",
	"primitives/test-helpers",
	"runtime/common",
	"runtime/common/slot_range_helper",
	"runtime/metrics",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/polkadot/constants",
	"runtime/kusama",
	"runtime/kusama/constants",
	"runtime/rococo",
	"runtime/rococo/constants",
	"runtime/westend",
	"runtime/westend/constants",
	"runtime/test-runtime",
	"runtime/test-runtime/constants",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"xcm/xcm-executor/integration-tests",
	"xcm/xcm-simulator",
	"xcm/xcm-simulator/example",
	"xcm/xcm-simulator/fuzzer",
	"xcm/pallet-xcm",
	"xcm/pallet-xcm-benchmarks",
	"xcm/procedural",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/chain-selection",
	"node/core/dispute-coordinator",
	"node/core/parachains-inherent",
	"node/core/prospective-parachains",
	"node/core/provisioner",
	"node/core/pvf",
	"node/core/pvf/common",
	"node/core/pvf/execute-worker",
	"node/core/pvf/prepare-worker",
	"node/core/pvf-checker",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/network/dispute-distribution",
	"node/overseer",
	"node/malus",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem-types",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/gum",
	"node/gum/proc-macro",
	"node/metrics",
	"node/test/client",
	"node/test/performance-test",
	"node/test/service",
	"node/zombienet-backchannel",
	"rpc",
	"parachain",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
	"parachain/test-parachains/halt",
	"parachain/test-parachains/undying",
	"parachain/test-parachains/undying/collator",
	"utils/staking-miner",
	"utils/remote-ext-tests/bags-list",
	"utils/generate-bags",
]

[badges]
maintenance = { status = "actively-developed" }

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = {opt-level = 3}
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]
jemalloc-allocator = ["polkadot-node-core-pvf-prepare-worker/jemalloc-allocator", "polkadot-overseer/jemalloc-allocator"]
network-protocol-staging = ["polkadot-cli/network-protocol-staging"]

# Enables timeout-based tests supposed to be run only in CI environment as they may be flaky
# when run locally depending on system load
ci-only-tests = ["polkadot-node-core-pvf/ci-only-tests"]

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "security@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["target/release/polkadot-prepare-worker", "/usr/lib/polkadot/", "755"],
	["target/release/polkadot-execute-worker", "/usr/lib/polkadot/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

[package.metadata.spellcheck]
config = "./scripts/ci/gitlab/spellcheck.toml"

[patch."https://github.com/paritytech/substrate"]
binary-merkle-tree = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
extrinsic-shuffler = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
fork-tree = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-election-provider-solution-type = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-election-provider-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-remote-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-procedural = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-test = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-support-test-pallet = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-system-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
generate-bags = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mangata-types = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mmr-gadget = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
mmr-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-assets = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-bags-list = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-bags-list-remote-tests = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-child-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-collective = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-conviction-voting = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-democracy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-fast-unstake = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-identity = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-im-online = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-indices = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-membership = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-multisig = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nis = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nomination-pools = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-offences = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-offences-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-preimage = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-proxy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-ranked-collective = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-recovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-referenda = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-scheduler = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-session = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-session-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-society = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking-reward-fn = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-staking-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-state-trie-migration = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-sudo = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-tips = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-treasury = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-uniques = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-vesting = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
pallet-whitelist = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-allocator = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-basic-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-client-db = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-beefy-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-grandpa-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor-common = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-informant = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-bitswap = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-common = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-gossip = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-light = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-sync = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-network-transactions = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-peerset = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc-server = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-rpc-spec-v2 = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-state-db = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-storage-monitor = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-sysinfo = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sc-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-application-crypto = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-core-hashing = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-core-hashing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-database = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-debug-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-metadata-ir = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-mmr-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-npos-elections = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-panic-handler = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-runtime-interface = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-session = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-staking = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-state-machine = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-ver = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-version = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-wasm-interface = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
sp-weights = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-rpc-client = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-state-trie-migration-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-test-client = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-test-utils = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-test-utils-derive = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
try-runtime-cli = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }
ver-api = { git = "https://github.com/mangata-finance/substrate", branch = "develop" }