[package]
name = "polkadot-rpc"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "18.0.0"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-finality-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-finality-grandpa-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
pallet-mmr-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
beefy-gadget = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
beefy-gadget-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
