[package]
name = "polkadot-voter-bags"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
generate-bags = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
structopt = "0.3.21"

westend-runtime = { path = "../../runtime/westend" }
kusama-runtime = { path = "../../runtime/kusama" }
polkadot-runtime = { path = "../../runtime/polkadot" }
