[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-executor"
description = "An abstract and configurable XCM message executor."
version = "0.9.12"

[dependencies]
impl-trait-for-tuples = "0.2.0"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
xcm = { path = "..", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
sp-io = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
sp-core = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
frame-support = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
log = { version = "0.4.14", default-features = false }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", default-features = false, optional = true , branch = "mangata-dev-v4" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
]
std = [
	"parity-scale-codec/std",
	"xcm/std",
	"sp-std/std",
	"sp-io/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"log/std",
]
