[package]
name = "remote-ext-tests-bags-list"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
polkadot-runtime = { version = "0.9.8", path = "../../../runtime/polkadot" }
kusama-runtime = { version = "0.9.8", path = "../../../runtime/kusama" }

pallet-staking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
pallet-bags-list = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
frame-election-provider-support = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
remote-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
tokio = { version = "1", features = ["macros"] }
log = { version = "0.4.14" }
structopt = {version = "0.3.23" }
