[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
version = "0.9.12"

[dependencies]
frame-support = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
futures = "0.3.17"
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-test-client = { path = "../../../node/test/client" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../../../node/test/service" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false , branch = "mangata-dev-v4" }
sp-state-machine = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
