[package]
name = "polkadot-simnet"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
support = { package = "frame-support", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
collective = { package = "pallet-collective", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
democracy = { package = "pallet-democracy", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

test-runner = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus-manual-seal = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

polkadot-primitives = { path = "../../../../primitives" }
polkadot-cli = { path = "../../../../cli", features = ["cli"] }
polkadot-service = { path = "../../../../node/service" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
polkadot-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.23"

[dev-dependencies]
log = "0.4.14"
