[package]
name = "polkadot-simnet-test"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# substrate primitives
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

# frame pallets
system = { package = "frame-system", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }
balances = { package = "pallet-balances", git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

# substrate client libs
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4" }

# polkadot deps
polkadot-simnet = { path = "../common" }
polkadot-runtime = { path = "../../../../runtime/polkadot" }
